# ROS-Robotics-Projects-SecondEdition

./: .gitignore  README.md
chapter_12_ws/dynamixel_motor/: .travis.yaml  README.md
chapter_12_ws/dynamixel_motor/dynamixel_controllers/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  setup.py
chapter_12_ws/dynamixel_motor/dynamixel_controllers/launch/: controller_manager.launch
chapter_12_ws/dynamixel_motor/dynamixel_controllers/nodes/: controller_manager.py  controller_spawner.py
chapter_12_ws/dynamixel_motor/dynamixel_controllers/src/dynamixel_controllers/: joint_controller.py  joint_position_controller.py  joint_position_controller_dual_motor.py  joint_torque_controller.py  joint_torque_controller_dual_motor.py  joint_trajectory_action_controller.py
chapter_12_ws/dynamixel_motor/dynamixel_controllers/srv/: SetComplianceMargin.srv  SetCompliancePunch.srv  SetComplianceSlope.srv  SetSpeed.srv  SetTorqueLimit.srv  StartController.srv  StopController.srv  TorqueEnable.srv
chapter_12_ws/dynamixel_motor/dynamixel_driver/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  setup.py
chapter_12_ws/dynamixel_motor/dynamixel_driver/scripts/: README  change_id.py  info_dump.py  set_servo_config.py  set_torque.py
chapter_12_ws/dynamixel_motor/dynamixel_driver/src/dynamixel_driver/: dynamixel_const.py  dynamixel_io.py  dynamixel_serial_proxy.py
chapter_12_ws/dynamixel_motor/dynamixel_motor/: CHANGELOG.rst  CMakeLists.txt  package.xml
chapter_12_ws/dynamixel_motor/dynamixel_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
chapter_12_ws/dynamixel_motor/dynamixel_msgs/msg/: JointState.msg  MotorState.msg  MotorStateList.msg
chapter_12_ws/dynamixel_motor/dynamixel_tutorials/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
chapter_12_ws/dynamixel_motor/dynamixel_tutorials/config/: dynamixel_joint_controllers.yaml
chapter_12_ws/dynamixel_motor/dynamixel_tutorials/launch/: controller_manager.launch  controller_spawner.launch
chapter_12_ws/face_tracker_control/src/: face_tracker_controller.cpp
chapter_12_ws/face_tracker_pkg/: CMakeLists.txt  package.xml
chapter_12_ws/face_tracker_pkg/config/: track.yaml
chapter_12_ws/face_tracker_pkg/launch/: start_tracking_bag.launch
chapter_12_ws/face_tracker_pkg/src/: face_tracker_node.cpp
chapter_2_ws/src/ros2_talker/: package.xml  setup.cfg  setup.py  talker.py
chapter_3_ws/src/robot_description/: CMakeLists.txt
chapter_3_ws/src/robot_description/launch/: mobile_manipulator_gazebo.launch  mobile_manipulator_gazebo_xacro.launch  mobile_manipulator_navigation.launch
chapter_3_ws/src/robot_description/meshes/: elbow.stl  wrist.stl
chapter_3_ws/src/robot_description/urdf/: gazebo_essentials.xacro  gazebo_essentials_base.xacro  mobile_manipulator.urdf  mobile_manipulator.urdf.xacro  robot_arm.urdf  robot_arm.urdf.xacro  robot_base.urdf  robot_base.urdf.xacro  robot_essentials.xacro
chapter_3_ws/src/robot_description_moveit_config/: CMakeLists.txt  package.xml
chapter_3_ws/src/robot_description_moveit_config/config/: fake_controllers.yaml  mobile_manipulator.srdf  ompl_planning.yaml  ros_controllers.yaml
chapter_3_ws/src/robot_description_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  mobile_manipulator_moveit_controller_manager.launch.xml  planning_pipeline.launch.xml  ros_controllers.launch  warehouse.launch
chapter_4_ws/src/: simple_fsm.py
chapter_4_ws/src/arm_client/: CMakeLists.txt  package.xml
chapter_4_ws/src/battery_simulator/: CMakeLists.txt  package.xml
chapter_4_ws/src/battery_simulator/action/: battery_sim.action
chapter_4_ws/src/battery_simulator/launch/: battery_simulator.launch
chapter_4_ws/src/battery_simulator/src/: arm_action_client.py  battery_sim_client.py  battery_sim_server.py  battery_simulator_test.py  simple_action_client.py  simple_action_server.py
chapter_4_ws/src/smach_example/: CMakeLists.txt  package.xml  simple_fsm.py  waiter_robot_anology.py
chapter_5_ws/: test.pgm
chapter_5_ws/src/: dependencies.txt
chapter_5_ws/src/find-object/app/: Find-Object.rc
chapter_5_ws/src/find-object/launch/: find_object_3d.launch  find_object_3d_kinect2.launch
chapter_5_ws/src/find-object/src/: AboutDialog.cpp  AboutDialog.h  KeypointItem.cpp  KeypointItem.h  RectItem.cpp  RectItem.h
chapter_5_ws/src/navigation/: CMakeLists.txt  package.xml
chapter_5_ws/src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
chapter_5_ws/src/navigation/launch/: mobile_manipulator_move_base.launch
chapter_5_ws/src/robot_description/config/: arm_control.yaml  control.yaml  control_fetch.yaml  view_urdf.rviz
chapter_5_ws/src/robot_description/launch/: arm_gazebo_control.launch  arm_gazebo_control_xacro.launch  base_gazebo_control.launch  base_gazebo_control_xacro.launch  mobile_manipulator_gazebo_xacro.launch  robot_gazebo_view.launch
chapter_5_ws/src/robot_description/meshes/: bicep.stl
chapter_5_ws/src/robot_description/urdf/: gazebo_essentials_arm.xacro  mobile_manipulator.urdf.xacro  robot_arm.urdf.xacro  robot_arm_essentials.xacro  robot_base.urdf.xacro  robot_base_essentials.xacro  robot_essentials.xacro
chapter_5_ws/src/robot_description/worlds/: postoffice.world
chapter_5_ws/src/robot_description_moveit_config/: .setup_assistant
chapter_5_ws/src/robot_description_moveit_config/config/: joint_limits.yaml
chapter_5_ws/src/robot_manipulator_description/: armcontroller.yaml  controller.yaml  joint_state_controller.yaml  test_robot_arm.launch  test_robot_arm.urdf  test_robot_manipulator.urdf  testrobot.launch  testrobot.urdf
chapter_5_ws/src/slam_karto/: CHANGELOG.rst  CMakeLists.txt  package.xml
chapter_5_ws/src/slam_karto/launch/: karto_slam.launch
chapter_6_ws/src/robot_description/: package.xml
chapter_7_ws/: alexa_ros_test.py  beagleboneblack_gpio.py  jetsonnano_gpio.py  raspberrypi_gpio.py  tinkerboard_gpio.py
chapter_8_ws/taxi_problem/: taxi_qlearn.py  taxi_sarsa.py
(+43 files in other folders)
